@@ -72,7 +72,7 @@
     <script src="rules/rules15-baea.js" type="text/javascript"></script>
     <script src="rules/rules15-france.js" type="text/javascript"></script>
     <script src="rules/rules15-ga.js" type="text/javascript"></script>
-    <script src="rules/rules15-iac.js" type="text/javascript"></script>
+    <script src="rules/rules16-iac.js" type="text/javascript"></script>
     <script src="rules/rules15-vink.js" type="text/javascript"></script>
     <script src="rules/rules16-glider-civa.js" type="text/javascript"></script>
     <script src="rules/rules15-nzac.js" type="text/javascript"></script>
